--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body >
   <div id="color" style="background-image:url(https://wallpaperaccess.com/full/1540016.jpg); background-size: cover;background-repeat: no-repeat;height: 100%;">
-    <div class="row  p-2 pb-5 mx-2  ">
+    <div class="row  p-5 pb-5 mx-2  ">
         <div class="col-md-4"></div>
         <div class="col-md-4 i rounded p-4   shadow " style="height: 100%;">
             <h2 class="text-center"><img  width="100%"  class="mt-2" src="https://webstockreview.net/images/cloudy-clipart-weather-word-14.png" alt=""></h2>
@@ -30,7 +30,7 @@
                 <h6 id="wind" class="text-warning mt-1">0km/hr</h6>
             </div>
             <div class="o  rounded p-2">
-                <img class="text-center" width="20%" src="https://cdn2.iconfinder.com/data/icons/weather-forecast-line/24/Humidity-512.png" alt="">  <span style="font-size: 14px;">humidity</span>
+                <img clgass="text-center" width="20%" src="https://cdn2.iconfinder.com/data/icons/weather-forecast-line/24/Humidity-512.png" alt="">  <span style="font-size: 14px;">humidity</span>
                 <h5 class="text-center text-warning mt-1" id="humidity">0%</h5>
             </div>
            </div>
