--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body >
-  <div id="color" style="background-image:url(https://wallpaperaccess.com/full/1540016.jpg); background-size: cover;background-repeat: no-repeat;height: 100%;">
-    <div class="row  py-5  mx-2  ">
+  <div id="color" class="p-5" style="background-image:url(https://wallpaperaccess.com/full/1540016.jpg); background-size: cover;background-repeat: no-repeat;height: 100%;">
+    <div class="row py-5  mx-2  ">
         <div class="col-md-4"></div>
         <div class="col-md-4 i rounded p-4   shadow " style="height: 100%;">
             <h2 class="text-center"><img  width="100%"  class="mt-2" src="https://webstockreview.net/images/cloudy-clipart-weather-word-14.png" alt=""></h2>
